# Trupy-AI

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.uv  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  sessions.py
backend/app/core/: config.py  database.py  redis_client.py
backend/app/models/: session.py
backend/app/schemas/: chat.py  session.py
backend/app/services/: __init__.py  session_service.py  trupy_chat.py
frontend/: .dockerignore  Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: chat.js
frontend/src/components/: ChatInput.vue  ChatWindow.vue  MessageBubble.vue  Sidebar.vue  WelcomeScreen.vue
frontend/src/stores/: chat.js
